# cocoon-ai

./: .env.example  CONTRIBUTING.md  README.md  cocoon_engine.py  cocoon_manifest.json  flight_game.py  pyproject.toml  requirements_engine.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cocoon-bloom.yml  release.yml
chrysalis/: Cargo.toml
chrysalis/crates/antennae/src/: lib.rs
chrysalis/crates/cocoon-cli/: Cargo.toml
chrysalis/crates/cocoon-cli/src/: main.rs
chrysalis/crates/hive/src/: lib.rs
chrysalis/crates/instinct/src/: lib.rs
chrysalis/crates/metamorphosis/src/: lib.rs
chrysalis/crates/nectar/src/: lib.rs
chrysalis/crates/web/src/: lib.rs
chrysalis/crates/wings/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  LARVAE.md  LIFECYCLE.md  README.md  SWARM.md
examples/chrome-extension/: README.md
examples/saas-launch/: README.md
landing_page/: index.html  script.js  style.css
scripts/: benchmark.sh  bloom-nightly.sh  install.sh
src/: bloom.py  emerge.py  hatchery.py  manifest.py  mother.py  silk.py
src/larvae/: __init__.py  coder.py  custom.py  designer.py  scraper.py  tester.py
src/models/: swarm.py
src/utils/: crypto.py  logger.py
tests/: demo_snake_game.py  test_smoke.py
tests/integration/: test_full_lifecycle.py
web_flight/: game.js  index.html  style.css
